--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(tiny_renderer)
 
 set(CMAKE_CXX_STANDARD  20)
 
-add_executable(tiny_renderer main.cpp tgaimage.cpp model.cpp)
+add_executable(tiny_renderer main.cpp tgaimage.cpp model.cpp geometry.cpp)
